# sheaf-archive-tool

./: CLAUDE.md  README.md  pyproject.toml
config/: adapter.yaml  system_prompt.txt  thresholds.yaml  tools.yaml
config/prompts/: edit.txt  enrichment.txt  identification.txt  import.txt
db/: archive.db
docs/: DESIGN.md
protocols/enrichment/: photo-description-local.yaml
protocols/identification/: camera-roll-identifier.yaml
protocols/import/: panasonic-dmc-ts3-photo.yaml  panasonic-dmc-ts3-video.yaml
shapes/: dcim-camera-card.yaml
sheaf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: cli.py  config.py  exceptions.py
src/adapter/: __init__.py  base.py  claude.py
src/archive/: integrity.py  layout.py  sidecar.py
src/chat/: session.py
src/db/: queries.py  schema.py
src/jobs/: queue.py  worker.py
src/oplog/: reader.py  rollback.py  writer.py
src/protocols/: author.py  classifier.py  executor.py  loader.py  matcher.py  model.py  sdk_builder.py  tools_registry.py
src/web/: server.py
